# okfd

./: .gitignore  Cargo.toml  Makefile  README.md  bindings.toml
.cargo/: config.toml
character/: Cargo.toml
character/src/: actions.rs  lib.rs
character/src/character_controller/: bindings.toml  floating.rs  mod.rs  movement.rs
level_builder/: Cargo.toml
level_builder/src/: lib.rs  planes.rs  rooms.rs
materials/: Cargo.toml
materials/src/: tiling.rs
physics/: Cargo.toml
physics/src/: spring.rs
src/: build.rs  lib.rs  main.rs
src/character/: mod.rs
src/control/: actions.rs  bindings.rs  bindings.toml  camera.rs  mod.rs
src/environment/: mod.rs
src/loader/: mod.rs
src/metadata/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
src/world/: mod.rs
src/world/characters/: debug.rs  mod.rs
world/: Cargo.toml
world/src/: lib.rs
