[package]
name = "okfd"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0" }
avian3d = "0.1.1"
bevy_egui = "0.28.0"
gltf = "1.4.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
